--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jellyfin-discord-music-bot",
-  "version": "0.1.1",
+  "version": "1.1.2",
   "description": "A simple and leightweight Discord Bot, that integrates with your Jellyfin Media server and enables you to listen to your favourite music directly from discord.",
   "author": "manuel-rw",
   "private": true,
@@ -37,8 +37,10 @@
     "@nestjs/terminus": "^9.2.2",
     "date-fns": "^2.30.0",
     "discord.js": "^14.11.0",
+    "ffmpeg": "^0.0.4",
     "joi": "^17.12.3",
     "libsodium-wrappers": "^0.7.10",
+    "nest": "^0.1.6",
     "opusscript": "^0.1.1",
     "reflect-metadata": "^0.1.14",
     "rimraf": "^5.0.1",
